# event-tracker

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
src/event_tracker/: crew.py  main.py
src/event_tracker/config/: tasks.yaml
tests/: test_agents.py  test_crew.py  test_tasks.py
